name:                PLEditor
version:             0.1.0.0
synopsis:            An editor for PL
description:         An editor intended to eventually be used with PL.
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7
                     , transformers
                     , text

  exposed-modules:     PLEditor
                     , PLEditor.Line
                     , PLEditor.Lines
                     , PLEditor.CurrentLine
                     , PLEditor.Editor

  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
